# polcomply

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CURSOR_PROMPTS.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  GTM_STRATEGY.md  LAUNCH_PLAN.md  LAUNCH_SUMMARY.md  LICENSE  Makefile  NEXT_STEPS.md  PILOT_OFFER.md  POLCOMPLY_BLUEPRINT.md  PRICING_RESEARCH.md  PR_READY.md  README.md  SALES_ONEPAGER.md  SALES_SCRIPT.md  SANITY_SUMMARY.md  VERIFICATION_REPORT.md  coverage.xml  docker-compose.yml  nginx.conf  nixpacks.toml  railway.toml  render.yaml  test.db  test_invoice.xml
.cursor/rules/: 00-project.mdc  10-python.mdc  20-ksef.mdc
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  polcomply.db  requirements.txt  test_fa3_direct.py  test_invoice.xml  test_invoice_invalid.xml  test_simple.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: __init__.py  audit.py  company.py  invoice.py  user.py
backend/app/routers/: __init__.py  ai.py  auth.py  companies.py  export.py  invoices.py  ksef.py  lead.py  validate.py  vat.py
backend/app/schemas/: __init__.py  ai.py  auth.py  company.py  invoice.py  user.py
backend/static/: index.html  upload.html
backend/tests/: __init__.py  conftest.py  test_exporters.py  test_fa3_validator.py  test_ksef_mode_switch.py  test_validation_endpoint.py
frontend/: Dockerfile  package.json
polcomply/: .coverage  README.md  __init__.py  demo_cli.py  landing.html  pyproject.toml  test_validation.py
polcomply-clean/polcomply/: test_demo.py
polcomply/.github/workflows/: ci.yml
polcomply/cli/: __init__.py  main.py
polcomply/cli/commands/: __init__.py  map.py  validate.py
polcomply/examples/: advance_invoice.csv  basic_invoice.csv  correction_invoice.csv  minimum_invoice.csv  mpp_invoice.csv  vat_invoice.csv
polcomply/mapping/: __init__.py  csv_to_fa.py  fa3.yaml
polcomply/polcomply.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
polcomply/reporting/: __init__.py  html_report.py
polcomply/schemas/: FA-3.xsd
polcomply/tests/: __init__.py
polcomply/tests/golden/fa3/: invalid_nip.xml  invalid_postal_code.xml  invalid_vat_rate.xml  valid_fv_b2b.xml  valid_korekta.xml  valid_mpp.xml
polcomply/tests/mapping/: __init__.py  test_csv_to_fa.py
polcomply/tests/validators/: __init__.py  test_xsd.py
polcomply/tests/validators/golden_files/: empty_invoice.xml  invalid_invoice_1.xml  invalid_invoice_2.xml  invalid_invoice_3.xml  invalid_invoice_4.xml  invalid_invoice_5.xml  invalid_nip.xml  malformed_xml_1.xml  malformed_xml_2.xml  negative_amounts.xml  valid_invoice_1.xml  valid_invoice_2.xml  valid_invoice_3.xml  valid_invoice_4.xml  valid_invoice_5.xml  wrong_namespace.xml
polcomply/validators/: __init__.py  paths.py  xsd.py
sales/: dm_templates_pl.md  landing.md  linkedin_post_pl.md  onepager_pl.md  pricing.md
(+12 files in other folders)
